# pr_review_crew

./: .gitignore  README.md  news_report.txt  pyproject.toml
db/: chroma.sqlite3
src/pr_review_crew/: article_writer_crew.py  crew.py  custom_tools.py  main.py  news_injest_crew.py  news_links_finder_crew.py  news_reader_crew.py  ollama_agent.py  pr_creation_crew.py  write_report_tool.py
src/pr_review_crew/config/: agents.yaml  tasks.yaml
src/pr_review_crew/tools/: pr_review_tool.py
