[tool.poetry]
name = "pr_review_crew"
version = "0.1.0"
description = "pr_review_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.76.9"}

[tool.poetry.scripts]
pr_review_crew = "pr_review_crew.main:run"

[tool.poetry.group.dev.dependencies]
crewai = "^0.76.9"
crewai-tools = "^0.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"